    - Fixed: Help links (new URL pattern). (#596)
    - Fixed: Unwanted horizontal scroll bar with INTEF and UDL Styles. (#607)
    - Fixed: Missing fonts in the SimplePoint Style (404 errors).
    - Fixed: Cloze iDevice inputs width (too long). (#616)
    - Fixed: Cloze activity: Spaces before and after each word removed. (#598)

  * APSL
    - Package building.
    - New GitHub actions: Mac installer, SNAP package.
    - Two options by default in the question iDevices.
    - Fixed: Long contents save problem fixed: SIZE_LIMIT increased. (#496)
    - Fixed: Create images from LaTeX (SNAP version). Mimetex package included. (#599)
    - Fixed: Mac connection to GitHub (SSL context set). (#569)
    - Fixed: Mac connection to Wikepedia (SSL context set). (#570)
    - Fixed: RSS iDevice problems ("requests" module). (#497)
    - Fixed: Download Classification Sources button not working. (#620)
	
  * Pablo Amaya
    - Fixed: Unsaved changes in Chrome/Edge. (#617)
    
  * Juan Rafael Fernández
    - String extraction process revision.
    - Translations coordination.

  * eXeLearning.net Translation Team
    - New complete Spanish translation, by Juan Rafael Fernández.
    - New complete Basque translation, by Joxemi Andonegi and Eneko Andonegi Ferradas.
    - New complete Catalan translation, by Carles Ferrando Garcia.
    - New complete Galician translation, by Pablo Nimo.
    - New complete Valencian translation, by Ricardo Nutz.

intef-exe (3:2.6) lucid; urgency=medium

  * Ignacio Gros
    - TinyMCE: New image optimizer.
    - TinyMCE: New mind maps editor plugin (mindmaps, by David Richard).
    - TinyMCE: Paste as text by default. (#541)
    - TinyMCE: GNU Free Documentation License added to the available licenses list.
    - TinyMCE: The "Insert HTML code as text" plugin remembers the user's preferences.
    - You can save an iDevice with the editor in full screen mode.
    - New UDL Content iDevice and new UDL Style.