@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0"?>
 <theme>
     <name>UDL</name>
-    <version>1.0</version>
+    <version>1.1</version>
     <compatibility>2.6</compatibility>
     <author>Consejería de Educación y Deporte</author>
     <author-url>https://moocedu.juntadeandalucia.es/</author-url>
